--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ after_success:
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "{GH_USER_EMAIL}"
   - git add . ; git commit -m "Deploy to GitHub Pages"
-  - git remote show
-  - git push --force "https://${GH_TOKEN}@${GH_REF}" origin master
+  - git remote show origin
+  - git push --force "https://${GH_TOKEN}@${GH_REF}" origin
