--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ after_failure:
 
 after_success:
   - cd docs ; mv README.html index.html ; cp -R ../images images
+  - cd ..
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "{GH_USER_EMAIL}"
-  - git add . ; git commit -m "Deploy to GitHub Pages"
+  - git add docs ; git commit -m "Deploy to GitHub Pages"
   - git remote show origin
   - git push --force "https://${GH_TOKEN}@${GH_REF}" origin
