--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ after_success:
   - git config user.email "{GH_USER_EMAIL}"
   - git add docs ; git commit -m "Deploy to GitHub Pages"
   - git remote show origin
-  - git push --force "https://${GH_TOKEN}@${GH_REF}" origin
+  - git push  origin
