--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,5 @@ after_success:
   - git config user.email "{GH_USER_EMAIL}"
   - git remote add origin-pages https://${GH_TOKEN}@@${GH_REF}"
   - git add docs ; git commit -m "Deploy to GitHub Pages"
+  - git branch
   - git push --set-upstream origin-pages 
