--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ after_success:
   - git remote add origin-pages https://${GH_TOKEN}@@${GH_REF}"
   - git add docs ; git commit -m "Deploy to GitHub Pages"
   - git branch
-  - git push --set-upstream origin-pages 
+  - git push --set-upstream origin-pages:master
