--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,5 @@ after_success:
   - git remote add origin-pages https://${GH_TOKEN}@@${GH_REF}"
   - git add docs ; git commit -m "Deploy to GitHub Pages"
   - git branch
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}"  master > /dev/null 2>&1  
   - git push --set-upstream origin-pages:master
