--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
   - cd ..
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "{GH_USER_EMAIL}"
-  - git remote add origin-pages https://${GH_TOKEN}@@${GH_REF}"
+  - git remote add origin-pages "https://${GH_TOKEN}@@${GH_REF}"
   - git add docs ; git commit -m "Deploy to GitHub Pages"
   - git branch
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}"  master > /dev/null 2>&1  
