--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
 before_install:
   - mkdir -p output
   - docker pull asciidoctor/docker-asciidoctor
-  - git checkout master
+
 script:
-  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-html asciidoctor/docker-asciidoctor asciidoctor -D /documents/docs *.adoc
-  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D /documents/docs *.adoc
+  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-html asciidoctor/docker-asciidoctor asciidoctor -D /documents/output *.adoc
+  - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D /documents/output *.adoc
 
 after_error:
   - docker logs asciidoc-to-html
@@ -20,12 +20,9 @@ after_failure:
   - docker logs asciidoc-to-pdf
 
 after_success:
-  - cd docs ; mv README.html index.html ; cp -R ../images images
-  - cd ..
+  - cd output ; mv README.html index.html ; cp -R ../images images
+  - git init
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "{GH_USER_EMAIL}"
-  - git remote add origin-pages "https://${GH_TOKEN}@@${GH_REF}"
-  - git add docs ; git commit -m "Deploy to GitHub Pages"
-  - git branch
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}"  master > /dev/null 2>&1  
-  - git push --set-upstream origin-pages:master
+  - git add . ; git commit -m "Deploy to GitHub Pages"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages > /dev/null 2>&1
