--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - 4.1.1
 before_script:
   - npm install -g grunt-cli
-  - npm i --save asciidoctor.js@1.5.5-3
-  - npm i --save asciidoctor-reveal.js
+  - npm install -g asciidoctor.js@1.5.5-3
+  - npm install -g asciidoctor-reveal.js
   - node asciidoctor-reveal.js
 
