--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ before_script:
   - npm install -g grunt-cli
   - npm install -g asciidoctor.js@1.5.5-3
   - npm install -g asciidoctor-reveal.js
-  - node asciidoctor-reveal.js
-
+  - node asciidoctor2reveal.js
