--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,22 @@
 language: ruby
+
 rvm:
  - 2.2
  - jruby
+
+bundler_args: 
+
+before_install:
+  - mkdir -p output
+
+script:
+ - bundle exec asciidoctor-revealjs README.adoc -D output
+
+after_success:
+  - cd output ; mv README.html index.html ; cp -R ../images images
+  - git init
+  - git config user.name "${GH_USER_NAME}"
+  - git config user.email "{GH_USER_EMAIL}"
+  - git add . ; git commit -m "Deploy to GitHub Pages"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages > /dev/null 2>&1
  
