--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: ruby
 
 rvm:
  - 2.2
- - jruby
 
 bundler_args: 
 
 before_install:
   - mkdir -p output
+  - cd output ; git clone -b 3.3.0 --depth 1 https://github.com/hakimel/reveal.js.git; cd ..
 
 script:
  - bundle exec asciidoctor-revealjs README.adoc -D output
