--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ after_success:
   - git init
   - git config user.name "${GH_USER_NAME}"
   - git config user.email "{GH_USER_EMAIL}"
-  - git add . ; git commit -m "Deploy to GitHub Pages"
+  - git add . 
+  - git add reveal.js 
+  - git commit -m "Deploy to GitHub Pages"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages > /dev/null 2>&1
  
