--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 after_success:
   - cd output
   - mv README.html index.html
+  - sed -n '/est/p' index.html >client.html
   - cp -R ../images images
   - cp -R ../docs docs
   - cp -R ../reveal.js/css reveal.js/
