--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ script:
 
 after_success:
   - cd output
+  - wget https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js
+  - mkdir socket.io
+  - mv socket.io.js socket.io
   - mv README.html index.html
   - sed -f ../Client.sed index.html >client.html
   - cp -R ../images images
@@ -27,6 +30,7 @@ after_success:
   - git config user.email "{GH_USER_EMAIL}"
   - git add . 
   - git add reveal.js 
+  - git add socket.io 
   - git commit -m "Deploy to GitHub Pages"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages > /dev/null 2>&1
  
