--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ after_success:
   - mv README.html index.html
   - sed -f ../Client.sed index.html >client.html
   - sed -f ../Master.sed client.html >master.html
+  - cp ../package.json .
   - cp -R ../images images
   - cp -R ../docs docs
   - cp -R ../reveal.js/css reveal.js/
